tests/baselines/reference/instantiatedBaseTypeConstraints.errors.txt
==== tests/cases/compiler/instantiatedBaseTypeConstraints.ts (1 errors) ====
    interface Foo<T extends Foo<T, C>, C> {
                  ~~~~~~~~~~~~~~~~~~~
!!! instantiatedBaseTypeConstraints.ts(1,15): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
      foo(bar: C): void;
    }
    
    class Bar implements Foo<Bar, string> {
      foo(bar: string): void {
      }
    }
    
     
    